changed project directories